// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fab component when Natura dark theme is provided should render correctly: Provider Natura Dark Theme Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-4 MuiFab-primary NatDSFab-primary-5"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Fab component when Natura light theme is provided should render correctly: Provider Natura Light Theme Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-7 MuiFab-primary NatDSFab-primary-8"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;

exports[`Fab component when a color is specified should render color "light" correctly: Color light Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Fab component when a color is specified should render color "primary" correctly: Color primary Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1 MuiFab-primary NatDSFab-primary-2"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Fab component when a color is specified should render color "secondary" correctly: Color secondary Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1 MuiFab-secondary NatDSFab-secondary-3"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;

exports[`Fab component when a size is specified should render size "large" correctly: Size large Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1 MuiFab-primary NatDSFab-primary-2"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;

exports[`Fab component when a size is specified should render size "medium" correctly: Size medium Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1 MuiFab-sizeMedium MuiFab-primary NatDSFab-primary-2"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Fab component when a size is specified should render size "small" correctly: Size small Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1 MuiFab-sizeSmall MuiFab-primary NatDSFab-primary-2"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;

exports[`Fab component when a variant is specified should render variant "extended" correctly: Size extended Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1 MuiFab-extended MuiFab-primary NatDSFab-primary-2"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;

exports[`Fab component when a variant is specified should render variant "round" correctly: Size round Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1 MuiFab-primary NatDSFab-primary-2"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Fab component when disabled is explicitly false should render correctly: Not Disabled Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1 MuiFab-primary NatDSFab-primary-2"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;

exports[`Fab component when disabled is explicitly true should render correctly: Disabled Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1 Mui-disabled MuiFab-primary NatDSFab-primary-2 Mui-disabled"
  disabled={true}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;

exports[`Fab component when no props are provided should render correctly: No Props Fab 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1 MuiFab-primary NatDSFab-primary-2"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;
